Bug 696914 - 'IndexedDB: IDBObjectStore.delete and IDBCursor.delete should return undefined'. r=sicking.